# demo-volatility-oracles

./: .env  Cargo.toml  Makefile.toml  README.md  canister_ids.json  dfx.json
script/: deploy_prod_1_for_1day.sh  deploy_prod_2_for_4week.sh  deploy_prod_3_for_rv_snapshot.sh
script/etc/: data-for-1day.txt  data-for-1month.txt
src/abi/: Oracle.json
src/snapshot_indexer/: Cargo.toml  interface.did
src/snapshot_indexer/src/: constants.rs  lib.rs  store.rs  types.rs  utils.rs
src/uniswap_calculator/: Cargo.toml  interface.did
src/uniswap_calculator/src/: constants.rs  lib.rs  types.rs  utils.rs
src/uniswap_relayer/: Cargo.toml  interface.did
src/uniswap_relayer/src/: constants.rs  env.rs  eth.rs  lib.rs  store.rs  utils.rs
src/uniswap_snapshotter/: Cargo.toml  interface.did
src/uniswap_snapshotter/src/: constants.rs  lib.rs  store.rs  types.rs  utils.rs
