[package]
name = "uniswap_relayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
hex = "0.4.3"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
ic-web3 = "0.1.7"
ic-cdk-timers = "0.1.2"
serde = "1.0.162"

chainsight-generate = {path = "../../../chainsight-synchronizer/indexer/src/chainsight-generate"}
core = {path = "../../../chainsight-synchronizer/indexer/src/core"}
